padding above main button

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ html {
   <div class="w3-display-left w3-text-white" style="padding:80px">
     <h1 class="">Quick Response Services</h1>
   </div>
+   <div class="w3-display-left " style="padding:80px">
+  </div>
   <div class="w3-display-left w3-text-white" style="padding:80px">
     <div class="w3-row-padding w3-center" style="margin-top:181px"></div>
     <p><a href="#about" class="w3-button yel w3-padding-large w3-large w3-margin-top ">Learn more</a></p>
