--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ html {
 <header class="bgimg-1 w3-display-container" id="home">
   <div class="w3-display-left w3-text-white" style="padding:80px">
     <h1 class="">Quick Response Services</h1>
+    <div class=" " style="height: 20px;">
   </div>
-   <div class="w3-display-left " style="padding:80px">
   </div>
   <div class="w3-display-left w3-text-white" style="padding:80px">
     <div class="w3-row-padding w3-center" style="margin-top:181px"></div>
