Update phone number and landing page title

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home">
   <div class="w3-display-left w3-text-white" style="padding:80px">
-    <h1 class="">Quick Response Services</h1>
+    <h1 class="">Quick Response Restoration</h1>
     <div class=" " style="height: 45px;">
   </div>
   </div>
@@ -241,7 +241,7 @@ html {
   <div class="w3-row-padding" style="margin-top:32px">
     <div class="w3-half">
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Vanoucer, B.C</p>
-      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> +1 (605) 719-1587</p>
+      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> +1 (604) 719-1587</p>
       <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> contact@quickresponses.ca</p>
       <br>
       <form action="/action_page.php" target="_blank">
