Update name, and 'mould' -> 'mold'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Quick Response</title>
+  <title>Specialized Restoration</title>
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +46,7 @@ html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-yellow w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> QUICK RESPONSE </a>
+    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Specialized Restoration </a>
 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -197,7 +197,7 @@ html {
     </div>
     <div class="w3-third">
       <i class="fa fa-sun-o w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Mould Damage</p>
+      <p class="w3-large">Mold Damage</p>
     </div>
   </div>
 </div>
