Changed header -> 'Special Restoration'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home">
   <div class="w3-display-left w3-text-white" style="padding:80px">
-    <h1 class="">Quick Response Restoration</h1>
+    <h1 class="">Specialized Restoration</h1>
     <div class=" " style="height: 45px;">
   </div>
   </div>
