--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ html {
 <!-- About Section -->
 <div class="w3-container" style="padding:64px 40px" id="about">
   <h2 class="w3-center">ABOUT THE COMPANY</h2>
-  <p class="w3-large">Quick Response is a licensed Home Restoration Company. We provide professional, emergency home restoration services to remedy any damage. Our team of certified technicians are equipped to solve any problems which may have disturbed your home. We  understand the struggle home owners endure during these emergencies. We strive to be your 1-stop solution to quick and reliable home restoration. We &nbsp; &nbsp;&nbsp;    cater to clients throughout the lower mainland. Call us today.</p>
+  <p class="w3-large">Specialized Restoration is a licensed Home Restoration Company. We provide professional, emergency home restoration services to remedy any damage. Our team of certified technicians are equipped to solve any problems which may have disturbed your home. We  understand the struggle home owners endure during these emergencies. We strive to be your 1-stop solution to quick and reliable home restoration. We &nbsp; &nbsp;&nbsp;    cater to clients throughout the lower mainland. Call us today.</p>
   <div class="w3-row-padding w3-center" style="margin-top:32px">
     <p>
     </p>
@@ -134,7 +134,7 @@ html {
 <div class="w3-container" style="padding:60px 64px 30px" id="services">
   <h2 class="w3-center">OUR SERVICES</h2>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <p> Quick Reponse Restorations offers emergency like services. Our certified technicians will respond to your property to mitigate the water damage.
+    <p> Specialized Restorations offers emergency like services. Our certified technicians will respond to your property to mitigate the water damage.
     </p>
   </div>
 
@@ -228,7 +228,7 @@ html {
     <div class="w3-half">
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Vanoucer, B.C</p>
       <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> +1 (604) 719-1587</p>
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> contact@quickresponses.ca</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> specializedrestorationltd@gmail.com</p>
       <br>
       <form action="/action_page.php" target="_blank">
         <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
