--- a/index.html
+++ b/index.html
@@ -30,22 +30,26 @@ html {
 }
 .w3-button:hover{
   background-color: black !important;
-  color: #FFEB3B !important;
+  color: rgb(59, 193, 255) !important;
 }
 .yel{
-  background-color: #FFEB3B;
+  background-color: rgb(59, 193, 255);
   color: black;
 }
 .yel:hover{
   background-color: black !important;
-  color: #FFEB3B !important;
+  color: rgb(59, 193, 255) !important;
+}
+.w3-nav{
+  background-color: rgb(59, 193, 255) !important;
+
 }
 </style>
 <body>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-yellow w3-card" id="myNavbar">
+  <div class="w3-bar w3-nav w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Specialized Restoration </a>
 
     <!-- Right-sided navbar links -->
@@ -185,7 +189,7 @@ html {
 
 
 <!-- Our Values -->
-<div class="w3-container w3-row w3-center w3-yellow w3-padding-16">
+<div class="w3-container w3-row w3-center w3-nav w3-padding-16">
   <div class="w3-row-padding w3-center" style="margin-top:12px">
     <div class="w3-third">
       <i class="fa fa-tint w3-margin-bottom w3-jumbo w3-center"></i>
