--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ html {
 <!-- About Section -->
 <div class="w3-container" style="padding:64px 40px" id="about">
   <h2 class="w3-center">ABOUT THE COMPANY</h2>
-  <p class="w3-large">Specialized Restoration is a licensed Home Restoration Company. We provide professional, emergency home restoration services to remedy any damage. Our team of certified technicians are equipped to solve any problems which may have disturbed your home. We  understand the struggle home owners endure during these emergencies. We strive to be your 1-stop solution to quick and reliable home restoration. We &nbsp; &nbsp;&nbsp;    cater to clients throughout the lower mainland. Call us today.</p>
+  <p class="w3-large w3-center">Specialized Restoration is a licensed Home Restoration Company. We provide professional, emergency home restoration services to remedy any damage. Our team of certified technicians are equipped to solve any problems which may have disturbed your home. We understand the struggle home owners endure during these emergencies. We strive to be your 1-stop solution to quick and reliable home restoration. We cater to clients throughout the lower mainland. Call us today.</p>
   <div class="w3-row-padding w3-center" style="margin-top:32px">
     <p>
     </p>
