--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Specialized Restoration</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mina">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Mina", sans-serif}
 body, html {
@@ -127,6 +129,10 @@ html {
 box-shadow: 0px 0px;
 width: 100%;
 }
+
+.w3-top{
+  position: fixed;
+}
   .lr{
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
@@ -151,7 +157,7 @@ width: 100%;
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-nav w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button lmore"><i class="fa fa-home"></i><img src="logo.png" class="logo mob"></img></a>
+    <a href="#home" class="w3-bar-item w3-button lmore"><i class="fa fa-home"></i><img src="logo.png" class="logo mob mobLogo"></img></a>
 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -367,9 +373,7 @@ width: 100%;
   </div>
 </footer> -->
 
-<!-- Add Google Maps -->
 <script>
-
 
 // Modal Image Gallery
 function onClick(element) {
@@ -395,6 +399,17 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
+
+$(document).ready(function () {
+  $(window).scroll(function(){
+    $(".mobLogo").css("opacity", 1 - $(window).scrollTop() / 250);
+  });
+
+
+});
+
+
+
 </script>
 
 </body>
