--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@ html {
   .mob{
     display:none;
   }
+
+  .call:hover{
+  background-color: #a89d95 !important;
+}
+
+
+
+.lmore:hover{
+   background-color: #87c6db !important;
+
+}
+.yel:hover{
+  background-color: white;
+  color: #87c6db ;
+}
 }
 
 .mainText{
@@ -71,18 +86,7 @@ html {
 .call{
   background-color: #C0A28A !important;
 }
-.call:hover{
-  background-color: #a89d95 !important;
-}
 
-
-.lmore{
-
-}
-.lmore:hover{
-   background-color: #87c6db !important;
-
-}
 /* Full height image header */
 .bgimg-1 {
     background-position: center;
@@ -101,10 +105,7 @@ html {
   background-color: #98DBF3;
   color: black;
 }
-.yel:hover{
-  background-color: white;
-  color: #87c6db ;
-}
+
 .w3-nav{
   background-color: #98DBF3;
 
@@ -148,7 +149,9 @@ width: 100%;
   .sr{
     display: none;
   }
-
+.w3-button:hover{
+  background-color:rgba(0, 0, 0, 0) !important;
+}
 
 }
 </style>
