--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ width: 100%;
   .sr{
     display: none;
   }
-.w3-button:hover{
+myNavbar.w3-button:hover{
   background-color:rgba(0, 0, 0, 0) !important;
 }
 
