--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@ width: 100%;
   .sr{
     display: none;
   }
-myNavbar.w3-button:hover{
+
+.w3-hide-large:hover{
   background-color:rgba(0, 0, 0, 0) !important;
 }
 
