--- a/index.html
+++ b/index.html
@@ -265,18 +265,18 @@ width: 100%;
 
   <div class="w3-row-padding w3-center" style="margin-top:18px;">
     <div class="w3-third">
-      <h3>Category 1</h3>
+      <i class="fa fa-tint w3-margin-bottom w3-jumbo w3-center"></i>
 
         <p>"Clean Water" from a source with no risk of sickness or discomfort. Clean water may possibly be contaminated depending on the environment as it can mix with soil or debris.
         </p>
     </div>
     <div class="w3-third">
-      <h3>Category 2</h3>
+      <i class="fa fa-fire w3-margin-bottom w3-jumbo"></i>
         <p>"Grey Water" has a significant degree of chemical, biological, and or physical contamination. If untreated it can present a significant health risk Our certified technicians will mitigate the damage and remove all affected by the "Grey Water" as it can lead to mold growth.
         </p>
       </div>
     <div class="w3-third">
-      <h3>Category 3</h3>
+      <i class="fa fa-sun-o w3-margin-bottom w3-jumbo"></i>
         <p>"Black Water" which contains pathogenic agents from sewage or other contaminated water sources. Category 3 or Black water can cause discomfort and or sickness if exposed and untreated.
         </p>
 </div>
@@ -309,7 +309,9 @@ width: 100%;
 </div>
 
 
+
 <!-- Our Values -->
+<!-- 
 <div class="w3-container w3-row w3-center w3-nav w3-padding-16">
   <div class="w3-row-padding w3-center" style="margin-top:12px">
     <div class="w3-third">
@@ -326,6 +328,7 @@ width: 100%;
     </div>
   </div>
 </div>
+-->
 
 
 
@@ -370,7 +373,6 @@ width: 100%;
     </div>
     <div class="w3-half">
       <!-- Add Google Maps -->
-      <img class="mapImage"  src="https://static-maps.yandex.ru/1.x/?lang=en_US&ll=-123.12,49.28276&amp;l=map&z=12">
       <!-- <div id="googleMap" class="w3-greyscale" style="width:100%;height:510px;"></div> -->
     </div>
   </div>
