--- a/index.html
+++ b/index.html
@@ -266,18 +266,17 @@ width: 100%;
   <div class="w3-row-padding w3-center" style="margin-top:18px;">
     <div class="w3-third">
       <i class="fa fa-tint w3-margin-bottom w3-jumbo w3-center"></i>
-
-        <p>"Clean Water" from a source with no risk of sickness or discomfort. Clean water may possibly be contaminated depending on the environment as it can mix with soil or debris.
-        </p>
+      <p class="w3-large">Water Damage</p>
     </div>
     <div class="w3-third">
       <i class="fa fa-fire w3-margin-bottom w3-jumbo"></i>
-        <p>"Grey Water" has a significant degree of chemical, biological, and or physical contamination. If untreated it can present a significant health risk Our certified technicians will mitigate the damage and remove all affected by the "Grey Water" as it can lead to mold growth.
-        </p>
+      <p class="w3-large">Fire Damage</p>
+        
       </div>
     <div class="w3-third">
       <i class="fa fa-sun-o w3-margin-bottom w3-jumbo"></i>
-        <p>"Black Water" which contains pathogenic agents from sewage or other contaminated water sources. Category 3 or Black water can cause discomfort and or sickness if exposed and untreated.
+      <p class="w3-large">Mold Damage</p>
+        <p>
         </p>
 </div>
   </div>
