--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ width: 100%;
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-nav w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button lmore"><i class="fa fa-home"></i><img src="logo.png" class="logo mob mobLogo"></img></a>
+    <a href="#home" class="w3-bar-item w3-button lmore"><i class="fa fa-home"></i><img src="logo.png" class="logo mob mobLogo"></img>SPECIALIZED RESTORATION</a>
 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -259,7 +259,7 @@ width: 100%;
 <div class="w3-container" style="padding:60px 64px 30px" id="services">
   <h2 class="w3-center">OUR SERVICES</h2>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <p> Specialized Restorations offers emergency like services. Our certified technicians will respond to your property to mitigate the water damage.
+    <p> Specialized Restorations offers emergency like services. Our team of certified technicians will immediately respond to your property to mitigate the water damage.
     </p>
   </div>
 
@@ -267,17 +267,18 @@ width: 100%;
     <div class="w3-third">
       <i class="fa fa-tint w3-margin-bottom w3-jumbo w3-center"></i>
       <p class="w3-large">Water Damage</p>
+      <p>Water damage can range from clean water, to grey water, to black water. Depending on the type of water damage you may need emergency assistance</p>
     </div>
     <div class="w3-third">
       <i class="fa fa-fire w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Fire Damage</p>
+      <p>Fire can ruin the integrity of the structure of your home. It's critical to remediate this type of damage as soon as possible.</p>
         
       </div>
     <div class="w3-third">
       <i class="fa fa-sun-o w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Mold Damage</p>
-        <p>
-        </p>
+        <p>Mold damage has a significant degree of chemical, biological, and or physical contamination. If untreated it can present a significant health risk.</p>
 </div>
   </div>
 
